Fixes #153. Added save button when the download is finished.

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -27,6 +27,7 @@
 	"PLAY": "Play",
 	"CANCEL": "Cancel",
 	"CLOSE": "Close",
+	"SAVE": "Save",
 	"CAST": "Cast",
 	"DIRECTOR": "Director",
 	"AUDIO_LANGUAGE": "Audio language",
