--- a/app/locales/es.json
+++ b/app/locales/es.json
@@ -27,6 +27,7 @@
 	"PLAY": "Reproducir",
 	"CANCEL": "Cancelar",
 	"CLOSE": "Cerrar",
+	"SAVE": "Guardar",
 	"CAST": "Reparto",
 	"DIRECTOR": "Director",
 	"AUDIO_LANGUAGE": "Idioma de audio",
